updating in progress page

--- a/public/workit.html
+++ b/public/workit.html
@@ -94,49 +94,49 @@
 
           <div class="col-md-6">
             <div class="card">
-              <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
-            <h4 class="card-title">FLAB</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <a href="#"><img src="assets/flab.png" class="card-img-top img-fluid"></a>
+            <h4 class="card-title text-center pt-3">FLAB</h4>
+            <p class="card-text pr-2 pl-2 pb-2">This is a blog for college football enthusiasts who also like craft beer.  Merritt Schumann II is the founding father of this group and has used his ingenious Excel skills over the years to organize his own approach to a fantasy football league where winners are awarded.... you guessed it... their choice of beer.  Yes; he usually wins.  I plead the 5th regarding how much I help him enjoy the spoils.</p>
             </div>
           </div>
 
           <div class="col-md-6">
             <div class="card">
-              <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
-            <h4 class="card-title">DEVinition</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <a href="#"><img src="assets/dev_blog.png" class="card-img-top img-fluid"></a>
+            <h4 class="card-title text-center pt-3">DEVinition</h4>
+            <p class="card-text pr-2 pl-2 pb-2">One New DEV seeks to define life's challenges and experiences entering the world of code. I read somewhere that it is good practice to try and replicate the website designs of others. The landing page of this site is inspired by a blog which made a top ten list for its design appeal.</p>
             </div>
           </div>
 
         <div class="col-md-6">
             <div class="card">
-              <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
-            <h4 class="card-title">Essentially</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <a href="#"><img src="assets/GVwine.png" class="card-img-top img-fluid"></a>
+            <h4 class="card-title text-center pt-3">GV Wine Country</h4>
+            <p class="card-text pr-2 pl-2 pb-2">Did you know that there are 21 wineries on the Western Slope in Colorado?  I haven't been to all of them, but I'm creating this app so that users can plan their winery tours whether by bike (which is popular), Uber, or limo! I'm currently investigating some wine APIs I've found, and will likely integrate 3rd party apps such as Yelp and Google Maps. The design utilizes Bootstrap 4 and currently contains a parallax feature. As for wine, would you rather have red or white?</p>
             </div>
         </div>
 
         <div class="col-md-6">
             <div class="card">
               <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
-            <h4 class="card-title">Chocolate Fizz</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h4 class="card-title text-center pt-3">Chocolate Fizz</h4>
+            <p class="card-text pr-2 pl-2 pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
         </div>
 
         <div class="col-md-6">
             <div class="card">
               <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
-            <h4 class="card-title">FoodieApp</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h4 class="card-title text-center pt-3">FoodieApp</h4>
+            <p class="card-text pr-2 pl-2 pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
         </div>
 
         <div class="col-md-6">
             <div class="card">
               <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
-            <h4 class="card-title">Weighty Matter</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h4 class="card-title text-center pt-3">Weighty Matter</h4>
+            <p class="card-text pr-2 pl-2 pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
         </div>
 
