still updating in progress page

--- a/public/workit.html
+++ b/public/workit.html
@@ -88,6 +88,7 @@
   <div class="container">
     <h1 class="">In Progress</h1>
     <small>Here's some of the other coding projects I'm currently working on:</small>
+    <muted>My task list includes adding a link to the Github repo & Heroku site.</muted>
 
       <div class="container pb-4">
         <div class="row">
@@ -118,17 +119,17 @@
 
         <div class="col-md-6">
             <div class="card">
-              <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
-            <h4 class="card-title text-center pt-3">Chocolate Fizz</h4>
-            <p class="card-text pr-2 pl-2 pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <a href="#"><img src="assets/ponder.png" class="card-img-top img-fluid"></a>
+            <h4 class="card-title text-center pt-3">Ponder</h4>
+            <p class="card-text pr-2 pl-2 pb-2">Did you know that founders of the multiple intelligence theory suggest that over our lifetime that we usually develop our strengths in two to three areas primarily?  Where you do you think your intelligence strengths reside?  Do you think you were born with these strengths, develop them over time, or both?  This website is a resource site intended to help those who work with youth be strategic about playtime as a resource for discovering latent strengths & responding to ignited interest.</p>
             </div>
         </div>
 
         <div class="col-md-6">
             <div class="card">
-              <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
+              <a href="#"><img src="assets/foodie.png" class="card-img-top img-fluid"></a>
             <h4 class="card-title text-center pt-3">FoodieApp</h4>
-            <p class="card-text pr-2 pl-2 pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="card-text pr-2 pl-2 pb-2">Have you found "the way" when it comes to healthy eating?  But then, the path to eating healthy is hard to navigate and wayyyy toooo tempting when it comes to dining out?!?!  Foodie Path will help you find the restaurants with the menu options you seek so that your path remains clean and pure. This is a 3 model, sessions-based, MEAN stack app which calls on the YELP API.  Additionally, this is a collaborative project between people building their dev skills & who also call themselves foodies!</p>
             </div>
         </div>
 
