--- a/public/about.html
+++ b/public/about.html
@@ -106,22 +106,101 @@
       <div class="container">
           <div class="row">
 
+            <div class="accordian col-md-5">
+              <h5>Some background on how my love for game-based learning led me here:</h5>
+
+              <div class="card">
+                  <div class="card-header bg-primary" id="headingOne">
+                    <h5 class="mb-0">
+                      <button class="btn btn-link" data-toggle="collapse" data-target="#set" aria-expanded="true" aria-controls="set">
+                        <span style="color:#EDE8CE">Set</span>
+                      </button>
+                    </h5>
+                  </div>
+
+                  <div id="set" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="card-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                    </div>
+                  </div>
+              </div>  <!-- end card -->
+
+              <div class="card">
+                  <div class="card-header bg-warning" id="headingTwo">
+                    <h5 class="mb-0">
+                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#nails" aria-expanded="false" aria-controls="nails">
+                        <span style="color:#EDE8CE">Nails</span>
+                      </button>
+                    </h5>
+                  </div>
+
+                  <div id="nails" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
+                    <div class="card-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div>
+                  </div>
+              </div>  <!-- end card -->
+
+              <div class="card">
+                  <div class="card-header bg-info" id="headingThree">
+                    <h5 class="mb-0">
+                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#schol" aria-expanded="false" aria-controls="schol">
+                        <span style="color:#EDE8CE">Scholastica</span>
+                      </button>
+                    </h5>
+                  </div>
+
+                  <div id="schol" class="collapse show" aria-labelledby="headingThree" data-parent="#accordion">
+                    <div class="card-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                    </div>
+                  </div>
+              </div>  <!-- end card -->
+
+              <div class="card">
+                  <div class="card-header bg-danger" id="headingFour">
+                    <h5 class="mb-0">
+                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#news" aria-expanded="false" aria-controls="news">
+                        <span style="color:#EDE8CE">Advocacy</span>
+                      </button>
+                    </h5>
+                  </div>
+
+                  <div id="news" class="collapse show" aria-labelledby="headingFour" data-parent="#accordion">
+                    <div class="card-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. .
+                    </div>
+                  </div>
+              </div>  <!-- end card -->
+
+              <div class="card">
+                  <div class="card-header bg-success" id="headingFive">
+                    <h5 class="mb-0">
+                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#trad" aria-expanded="false" aria-controls="trad">
+                        <span style="color:#EDE8CE">Tradition</span>
+                      </button>
+                    </h5>
+                  </div>
+
+                  <div id="trad" class="collapse show" aria-labelledby="headingFive" data-parent="#accordion">
+                    <div class="card-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. .
+                    </div>
+                  </div>
+              </div>  <!-- end card -->
 
 
-
-            <div class="col-md-5">
-
-              <ul class="list-group pt-2">
-                <li class="list-group-item bg-primary">First</li>
-                <li class="list-group-item bg-warning">Second</li>
-                <li class="list-group-item bg-info">Third</li>
-                <li class="list-group-item bg-danger">Fourth</li>
-                <li class="list-group-item bg-success">Fifth</li>
-              </ul>
+              <!-- <ul class="list-group pt-2">
+                      <li class="list-group-item bg-primary">First</li>
+                      <li class="list-group-item bg-warning">Second</li>
+                      <li class="list-group-item bg-info">Third</li>
+                      <li class="list-group-item bg-danger">Fourth</li>
+                      <li class="list-group-item bg-success">Fifth</li>
+              </ul> -->
             </div>
 
             <div class="col-md-7">
-              <img src="http://via.placeholder.com/750x400" class="img-fluid" alt="">
+              <img src="http://via.placeholder.com/750x45s0" class="img-fluid" alt="">
             </div>
 
             <div class="row mt-3">
@@ -204,6 +283,8 @@
         $('[data-toggle="tooltip"]').tooltip()
         $('[data-toggle="popover"]').popover()
       })
+
+      $('.collapse').collapse()
     </script>
     </body>
   </html>
