--- a/public/workit.html
+++ b/public/workit.html
@@ -88,7 +88,7 @@
   <div class="container">
     <h1 class="">In Progress</h1>
     <small>Here's some of the other coding projects I'm currently working on:</small>
-    <muted>My task list includes adding a link to the Github repo & Heroku site.</muted>
+
 
       <div class="container pb-4">
         <div class="row">
@@ -135,14 +135,15 @@
 
         <div class="col-md-6">
             <div class="card">
-              <a href="#"><img src="http://via.placeholder.com/500x300" class="card-img-top img-fluid"></a>
-            <h4 class="card-title text-center pt-3">Weighty Matter</h4>
-            <p class="card-text pr-2 pl-2 pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <a href="#"><img src="assets/gtac_site.png" class="card-img-top img-fluid"></a>
+            <h4 class="card-title text-center pt-3">D51 GT Insider</h4>
+            <p class="card-text pr-2 pl-2 pb-2">Where do you feel led to volunteer your time? I'm just ending four years of service on a local committee which reported to a school board with advisory recommendations on matters related to gifted youth in our community. I served as a Co-Chair for two of those years, and during that time created a Google Sites website as a capstone project while working on my master's degree to obtain my certification as a Gifted-talented Education Specialist. This project is a redesign of that original site. During my service on the committee, I saw a need for a digital presence so that transparency, communication, outreach, and collaboration could better be served. This project is part of a torch I'm passing on as I move on to other volunteer commitments.</p>
             </div>
         </div>
 
       </div>
-
+      <hr class="my-5">
+      <small>My task list includes adding a link to the Github repo & Heroku site.</small>
     </div><!-- container end -->
 
 
