updated about page w/pics

--- a/public/about.html
+++ b/public/about.html
@@ -128,7 +128,7 @@
               <div class="card">
                   <div class="card-header bg-warning" id="headingTwo">
                     <h5 class="mb-0">
-                      <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#nails" aria-expanded="false" aria-controls="nails">
+                      <button class="btn btn-link collapse" data-toggle="collapse" data-target="#nails" aria-expanded="false" aria-controls="nails">
                         <span style="color:#EDE8CE">Nails</span>
                       </button>
                     </h5>
@@ -189,18 +189,10 @@
                   </div>
               </div>  <!-- end card -->
 
-
-              <!-- <ul class="list-group pt-2">
-                      <li class="list-group-item bg-primary">First</li>
-                      <li class="list-group-item bg-warning">Second</li>
-                      <li class="list-group-item bg-info">Third</li>
-                      <li class="list-group-item bg-danger">Fourth</li>
-                      <li class="list-group-item bg-success">Fifth</li>
-              </ul> -->
-            </div>
+            </div>  <!-- end accordion -->
 
             <div class="col-md-7">
-              <img src="http://via.placeholder.com/750x45s0" class="img-fluid" alt="">
+              <img src="assets/pirate.png" class="img-fluid" alt="">
             </div>
 
             <div class="row mt-3">
@@ -214,11 +206,11 @@
           </div>
 <!-- mb-3 = margin-bottom (can do mt ml mr) -->
           <div class="row mb-5">
-            <div class="col-md-3"><img src="http://via.placeholder.com/550x350" class="img-fluid" alt=""><p class="bg-danger text-white">More info about this</p></div>
+            <div class="col-md-3"><img src="assets/block.JPG" class="img-fluid" alt=""><p class="bg-danger text-white">More info about this</p></div>
 
-            <div class="col-md-3"><img src="http://via.placeholder.com/550x350" class="img-fluid" alt=""><p class="bg-info text-white">More info about this</p></div>
-            <div class="col-md-3"><img src="http://via.placeholder.com/550x350" class="img-fluid" alt=""><p class="bg-warning text-white">More info about this</p></div>
-            <div class="col-md-3"><img src="http://via.placeholder.com/550x350" class="img-fluid" alt=""><p class="bg-primary text-white">More info about this</p></div>
+            <div class="col-md-3"><img src="assets/gravity.JPG" class="img-fluid" alt=""><p class="bg-info text-white">More info about this</p></div>
+            <div class="col-md-3"><img src="assets/troy.JPG" class="img-fluid" alt=""><p class="bg-warning text-white">More info about this</p></div>
+            <div class="col-md-3"><img src="assets/utopia.JPG" class="img-fluid" alt=""><p class="bg-primary text-white">More info about this</p></div>
         </div>
         <h2>could incorporate 3rd party API BoardGame Geek to showcase games I love</h2>
       </div>
