--- a/public/about.html
+++ b/public/about.html
@@ -92,10 +92,10 @@
   <div class="container">
       <div class="jumbotron shadow-lg" style="background-color:#A2C0CD">
         <!-- text-primary -->
-        <div class="h1"><span class="badge badge-warning text-primary">About Page</span></div>
+        <div class="h1"><span class="badge badge-warning text-primary">How I Came to this Fork in the Road</span></div>
         <hr class="my-5">
         <!-- rounded badge: -->
-            <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">Use this</span> template to flesh out the other pages</p>
+            <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">The path</span> to becoming a full stack developer was an unexpected journey.</p>
 
         <hr class="my-1">
 
@@ -206,11 +206,11 @@
           </div>
 <!-- mb-3 = margin-bottom (can do mt ml mr) -->
           <div class="row mb-5">
-            <div class="col-md-3"><img src="assets/block.JPG" class="img-fluid" alt=""><p class="bg-danger text-white">More info about this</p></div>
+            <div class="col-md-3"><img src="assets/block.JPG" class="img-fluid" alt=""><p class="bg-danger text-white text-center pt-2 pb-2">Block by Block</p></div>
 
-            <div class="col-md-3"><img src="assets/gravity.JPG" class="img-fluid" alt=""><p class="bg-info text-white">More info about this</p></div>
-            <div class="col-md-3"><img src="assets/troy.JPG" class="img-fluid" alt=""><p class="bg-warning text-white">More info about this</p></div>
-            <div class="col-md-3"><img src="assets/utopia.JPG" class="img-fluid" alt=""><p class="bg-primary text-white">More info about this</p></div>
+            <div class="col-md-3"><img src="assets/gravity.JPG" class="img-fluid" alt=""><p class="bg-info text-white text-center pt-2 pb-2">Gravity Maze</p></div>
+            <div class="col-md-3"><img src="assets/troy.JPG" class="img-fluid" alt=""><p class="bg-warning text-white text-center pt-2 pb-2">Troy</p></div>
+            <div class="col-md-3"><img src="assets/utopia.JPG" class="img-fluid" alt=""><p class="bg-primary text-white text-center pt-2 pb-2">Utopia</p></div>
         </div>
         <h2>could incorporate 3rd party API BoardGame Geek to showcase games I love</h2>
       </div>
