adding pics to about accordion

--- a/public/about.html
+++ b/public/about.html
@@ -19,7 +19,8 @@
 
     <title>About</title>
     <style media="screen">
-      body{background-color: #EDE8CE;}
+      body{background-color: #EDE8CE;
+        font-family: 'Kalam', cursive;}
 
       #fontK{font-family: 'Kalam', cursive;}
 
@@ -37,7 +38,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar fixed-top navbar-dark navbar-expand-sm" style="background-color:#052F5F">
+    <nav class="navbar fixed-top text-light navbar-expand-sm" style="background-color:#052F5F">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -103,12 +104,12 @@
   <div class="container">
       <div class="jumbotron shadow-lg" style="background-color:#A2C0CD">
         <!-- text-primary -->
-        <div class="h1 d-inline-block text-truncate" style="max-width: 383px;"><span class="badge badge-warning text-primary">How I Came to this Fork in the Road</span></div>
-        <hr class="my-5">
+        <div class="h1 d-inline-block text-truncate" style="max-width: 375px;"><span class="badge badge-warning text-primary">How I Came to this Fork in the Road</span></div>
+        <hr class="my-3">
         <!-- rounded badge: -->
-            <p class="lead"><span class="badge badge-pill" style="background-color:#052F5F">The path</span> to becoming a full stack developer was an unexpected journey.</p>
+            <h3 class="lead pb-3"><span class="badge badge-pill pt-2 pb-2" style="background-color:#052F5F">The path</span> to becoming a full stack developer was an unexpected journey.</ph3>
 
-        <hr class="my-1">
+        <hr class="my-1 pt-3">
 
 
             <button type="button" class="btn btn-warning text-primary" data-toggle="collapse" href="#aboutMe">Learn More</button>
@@ -120,7 +121,7 @@
           <div class="row">
 
             <div id="accordion" class="col-md-5">
-              <h5>Some background on how my love for game-based learning led me here:</h5>
+              <h5 id="fontK" style="color:#052F5F">Some background on how my love for game-based learning led me here:</h5>
 
               <div class="card">
                   <div class="card-header bg-primary" id="headingOne">
@@ -133,6 +134,7 @@
 
                   <div id="set" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
+                      <img src="assets/set.png" class="card-img-top img-fluid pb-3">
                       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                     </div>
                   </div>
@@ -149,6 +151,7 @@
 
                   <div id="nails" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <div class="card-body">
+                      <img src="assets/nails.png" class="card-img-top img-fluid pb-3">
                       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                     </div>
                   </div>
