--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
         <div class="h1"><span class="badge badge-warning text-primary" data-toggle="tooltip" data-placement="bottom" title="Playd is a type of portfolio site to display Bootstrap 4 skills, share some insight about who I am & what makes me tick, & share some simple frontend javscript games as I continue to build my skills.">Playd</span></div>
         <hr class="my-5">
         <!-- rounded badge: -->
-            <h3 class="pb-3"><span class="badge badge-pill" style="background-color:#052F5F">Do you know</span> what my favorite part of the game is?  The opportunity to play.<br><span class="float-right font-italic">  -Mike Singletary </span></h3><br>
+            <h3 class="pb-3"><span class="badge badge-pill pt-2 pb-2" style="background-color:#052F5F">Do you know</span> what my favorite part of the game is?  The opportunity to play.<br><span class="float-right font-italic">  -Mike Singletary </span></h3><br>
 
         <hr class="my-1 pt-3">
             <h5 class="pt-4 pb-3"><span class="badge" style="background-color:#052F5F">In web development,</span> game theory & logic is relevant for making the user experience lighthearted, friendly, engaging, & purposeful! <span class="badge" style="background-color:#052F5F">In a learning environment,</span> the same is true.  Both of these worlds intersected in my life out of a desire to use creative & critical thinking to build tools which are more efficient & enjoyable for users!</h5>
