added photos and links to news & youtube for about content

--- a/public/about.html
+++ b/public/about.html
@@ -168,6 +168,7 @@
 
                   <div id="schol" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body">
+                      <img src="assets/tourney_set.png" class="card-img-top img-fluid pb-3">
                       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                     </div>
                   </div>
@@ -184,6 +185,7 @@
 
                   <div id="news" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                     <div class="card-body">
+                      <a href="http://www.westernslopenow.com/news/scholastica-creates-new-ways-to-learn/276175025" target="_blank">Scholastica Creates New Ways to Learn</a><br>
                       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. .
                     </div>
                   </div>
@@ -200,6 +202,7 @@
 
                   <div id="trad" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                     <div class="card-body">
+                      <iframe width="560" height="415" src="https://www.youtube.com/embed/ppEiDHYWFYk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class="img-fluid"></iframe>
                       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. .
                     </div>
                   </div>
