added more content for about me page

--- a/public/about.html
+++ b/public/about.html
@@ -185,6 +185,7 @@
 
                   <div id="news" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                     <div class="card-body">
+                      <img src="assets/news.png" class="card-img-top img-fluid pb-3">
                       <a href="http://www.westernslopenow.com/news/scholastica-creates-new-ways-to-learn/276175025" target="_blank">Scholastica Creates New Ways to Learn</a><br>
                       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. .
                     </div>
