--- a/public/about.html
+++ b/public/about.html
@@ -17,10 +17,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
 
+    <!-- Styles -->
+    <link rel="stylesheet" href="main.css">
+
     <title>About</title>
     <style media="screen">
-      body{background-color: #EDE8CE;
-        font-family: 'Kalam', cursive;}
+      body{
+        background-color: #EDE8CE;
+        /* font-family: 'Kalam', cursive; */
+      }
 
       #fontK{font-family: 'Kalam', cursive;}
 
