--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,19 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
 
+    <!-- Styles -->
+    <link rel="stylesheet" href="main.css">
+
     <title>Playd</title>
     <style media="screen">
-      body{background-color: #EDE8CE;}
+
 
       #fontK{font-family: 'Kalam', cursive;}
     </style>
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar fixed-top navbar-dark navbar-expand-sm" style="background-color:#052F5F">
+    <nav class="navbar fixed-top text-light navbar-expand-sm" style="background-color:#052F5F">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav">
         <span class="navbar-toggler-icon"></span>
       </button>
