--- a/public/workit.html
+++ b/public/workit.html
@@ -17,6 +17,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
 
+    <!-- Styles -->
+    <link rel="stylesheet" href="main.css">
+
     <title>In Progress</title>
     <style media="screen">
       body{background-color: #EDE8CE;}
@@ -26,7 +29,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar fixed-top navbar-dark navbar-expand-sm" style="background-color:#052F5F">
+    <nav class="navbar fixed-top text-light navbar-expand-sm" style="background-color:#052F5F">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -86,11 +89,11 @@
 
 <!-- Main content -->
   <div class="container">
-    <h1 class="">In Progress</h1>
+    <h1>In Progress</h1>
     <small>Here's some of the other coding projects I'm currently working on:</small>
 
 
-      <div class="container pb-4">
+      <div class="container pb-4 pt-3">
         <div class="row">
 
           <div class="col-md-6">
