--- a/public/simon.html
+++ b/public/simon.html
@@ -51,13 +51,10 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top text-light navbar-expand-sm" style="background-color:#052F5F">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <a href="index.html" class="navbar-brand"><img src="assets/cube-one-color-48-189122.png" alt=""></a>
-      <div class="collapse navbar-collapse" id="myNav">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBarMain" name="button"><a href="#" class="navbar-brand"><img src="assets/cube-one-color-48-189122.png" alt=""></a></button>
+      <div class="collapse navbar-collapse" id="navBarMain">
         <ul class="navbar-nav">
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Games</a>
               <div class="dropdown-menu">
@@ -68,7 +65,7 @@
                 <a class="dropdown-item" href="workit.html">In Progress</a>
               </div>
           </li>
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+
           <li class="nav-item"><a href="research.html" class="nav-link">Research</a></li>
           <li class="nav-item"><a href="connect.html" class="nav-link">Connect</a></li>
 
