--- a/public/research.html
+++ b/public/research.html
@@ -209,35 +209,39 @@
 </div>  <!-- research container end -->
 
 
-    <!-- Footer -->
-    <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
-      <button type="button" class="navbar-toggler mx-auto" data-toggle="collapse" data-target="#footer"><img src="assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out our Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts"></button>
-      <div class="collapse navbar-collapse" id="footer">
+<!-- Footer -->
+<footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
+  <button type="button" class="navbar-toggler mx-auto text-primary" data-toggle="collapse" data-target="#footer">Playfully made by  <img src="assets/cube-one-color-32-189122.png" alt="" data-toggle="tooltip" data-placement="top" title="Check out my Privacy Policy, Terms of Use, Legal Statement, and Social Media Accounts by clicking on the cube">  Jen Schumann</button>
+  <div class="collapse navbar-collapse" id="footer">
 
-      <div class="row">
-          <div class="col pt-4">
-                <p class="text-center" style="color:#EDE8CE">&copy; 2018 Playd</p>
-          </div>
-          <div class="col pt-3">
-            <div class="text-center">
-              <ul class="list-inline">
-                  <li class="list-inline-item text-primary"><a href="" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
-                  <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-                  <li class="list-inline-item text-danger"><a href="" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
-                  <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-pinterest-square fa-2x"></i></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col pt-4">
-            <ul class="list-inline">
-                <li class="list-inline-item text-primary"><a href="" target="_blank">Terms of Use</a></li>
-                <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE">Privacy Policy</a></li>
-                <li class="list-inline-item text-primary"><a href="" target="_blank">Legal</a></li>
-            </ul>
-          </div>
+  <div class="row">
+      <div class="col-md-6 col-lg-4 pt-4">
+            <p class="text-center" style="color:#EDE8CE">&copy; 2018 Playd</p>
       </div>
+      <div class="col-md-6 col-lg-4 pt-3">
+        <div class="text-center">
+          <ul class="list-inline">
+              <li class="list-inline-item text-primary"><a href="https://www.youtube.com/channel/UCWxS6QowypSYDSUilN4lPDw?view_as=subscriber" target="_blank"><i class="fab fa-youtube-square fa-2x"></i></a></li>
+              <!-- <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE"><i class="fab fa-facebook-square fa-2x"></i></a></li> -->
+
+              <li class="list-inline-item"><a href="https://github.com/JenSchumann/playd" target="_blank" style="color:#EDE8CE"><i class="fab fa-github-square fa-2x"></i></a></li>
+
+              <li class="list-inline-item text-danger"><a href="https://twitter.com/piquedplay3" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+
+              <li class="list-inline-item"><a href="https://www.pinterest.com/jennifergeeslin/games-galore-for-the-game-crazy-gal/?sender=404409378947473268&invite_code=56a637564a2340b2a35ba4c9bfbaf4f1" target="_blank" style="color:#EDE8CE"><i class="fab fa-pinterest-square fa-2x"></i></a></li>
+          </ul>
+        </div>
       </div>
-    </footer>
+      <div class="col-md-6 col-lg-4 pt-4">
+        <ul class="list-inline text-center">
+            <li class="list-inline-item text-primary"><a href="" target="_blank">Terms of Use</a></li>
+            <li class="list-inline-item"><a href="" target="_blank" style="color:#EDE8CE">Privacy Policy</a></li>
+            <li class="list-inline-item text-primary"><a href="" target="_blank">Legal</a></li>
+        </ul>
+      </div>
+  </div>
+  </div>
+</footer>
 
     <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
