hilo modal updated w/form for user feedback

--- a/public/about.html
+++ b/public/about.html
@@ -20,7 +20,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="main.css">
 
-    <title>About</title>
+    <title>Playd</title>
     <style media="screen">
       body{
         background-color: #EDE8CE;
