--- a/public/workit.html
+++ b/public/workit.html
@@ -20,7 +20,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="main.css">
 
-    <title>In Progress</title>
+    <title>Playd</title>
     <style media="screen">
       body{background-color: #EDE8CE;}
 
