--- a/public/whack.html
+++ b/public/whack.html
@@ -181,14 +181,36 @@
                     Take an office break and see how many computers you can whack!
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
+                    <button type="button" class="btn btn-primary" data-toggle="collapse" href="#whackmsg">Share Feedback</button><br>
                   </div>
-            </div>
-          </div>
-    </div>
 
-<!-- data-toggle="tooltip" data-placement="bottom" title="This game is not yet responsive for smaller screens yet, but press play & try one round anyway below (..just one round... it's not addictive at all!)." -->
+                  <div class="container collapse" id="whackmsg">
+                    <form class="" action="https://formspree.io/d3vignition@gmail.com" method="POST">
+                      <div class="form-group">
+                        <label for="name">Your Name:</label>
+                        <input type="text" class="form-control" id="name" name="name">
 
+                      </div>
+
+                      <div class="form-group">
+                        <label for="email">Your Email:</label>
+                        <input type="email" class="form-control" id="email" name="_replyto">
+
+                      </div>
+
+                      <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea rows="7" class="form-control" id="message" name="message"></textarea>
+                      </div>
+
+                  <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Send Message</button>
+                  </div> <!-- modal-footer   -->
+                  </form>
+                  </div> <!-- container collapse hilomsg -->
+            </div> <!-- modal-content   -->
+            </div> <!-- modal-dialog modal-dialog-centered   -->
+        </div> <!-- myMod -->
 
 
 <!-- Footer -->
