--- a/public/simon.html
+++ b/public/simon.html
@@ -153,11 +153,36 @@
                     Improve your memory by repeating a color sequence displayed to you just long enough for the hue to register in your retina!
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Send Message</button>
+                    <button type="button" class="btn btn-primary" data-toggle="collapse" href="#simonmsg">Share Feedback</button><br>
                   </div>
-            </div>
-          </div>
-    </div>
+
+                        <div class="container collapse" id="simonmsg">
+                          <form class="" action="https://formspree.io/d3vignition@gmail.com" method="POST">
+                            <div class="form-group">
+                              <label for="name">Your Name:</label>
+                              <input type="text" class="form-control" id="name" name="name">
+
+                            </div>
+
+                            <div class="form-group">
+                              <label for="email">Your Email:</label>
+                              <input type="email" class="form-control" id="email" name="_replyto">
+
+                            </div>
+
+                            <div class="form-group">
+                              <label for="message">Message:</label>
+                              <textarea rows="7" class="form-control" id="message" name="message"></textarea>
+                            </div>
+
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-primary">Send Message</button>
+                        </div> <!-- modal-footer   -->
+                        </form>
+                        </div> <!-- container collapse hilomsg -->
+                  </div> <!-- modal-content   -->
+                  </div> <!-- modal-dialog modal-dialog-centered   -->
+            </div> <!-- myMod -->
 
     <!-- Footer -->
     <footer class="navbar container-fluid text-light mt-3 fixed-bottom sticky-bottom" style="background-color:#052F5F">
